Update authors file. =)

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Authors:
 	* Milosz Derezynski
         * Mirsal Ennaime <mirsal dot ennaime at gmail dot com>
+	* Jorge Villaseñor <salinasv at gmail dot com>
